@@ -130,6 +130,10 @@
 (eval-when-compile
   (autoload 'rfc2368-parse-mailto-url "rfc2368"))
 
+(eval-when-compile
+  (when (featurep 'xemacs)
+    (defalias 'define-key-after 'ignore)))
+
 (defconst emacs-w3m-version
   (eval-when-compile
     (let ((rev "$Revision$"))
@@ -690,6 +694,11 @@ For twm use this in your .twmrc:
    NoTitle { \"balloon-help\" }
 
 See the file balloon-help.el for more information."
+  :group 'w3m
+  :type 'boolean)
+
+(defcustom w3m-use-tab-menubar (not (featurep 'xemacs))
+  "*If non-nil, create 'W3M-TAB' menubar."
   :group 'w3m
   :type 'boolean)
 
@@ -1799,7 +1808,67 @@ If N is negative, last N items of LIST is returned."
 							(aref def 1)))
 	    (put (aref def 1) 'menu-enable (aref def 2)))
 	  ;; (define-key map [separator-eval] '("--"))
-	  )))))
+	  ))
+      (when (and w3m-use-tab-menubar
+		 (not (lookup-key w3m-mode-map [menu-bar w3m-tab])))
+	(define-key-after
+	  (lookup-key w3m-mode-map [menu-bar])
+	  [w3m-tab]
+	  (cons "TAB" (cons 'keymap (w3m-tab-menubar-make-items))) t)
+	(add-hook 'menu-bar-update-hook 'w3m-tab-menubar-update)))
+    ))
+
+(defun w3m-tab-menubar-open-buffer ()
+  "Open w3m buffer from tab menubar."
+  (interactive)
+  (switch-to-buffer last-command-event))
+
+(defun w3m-tab-menubar-update ()
+  "Update w3m tab menubar."
+  (when (eq major-mode 'w3m-mode)
+    (define-key w3m-mode-map [menu-bar w3m-tab]
+      (cons "TAB" (cons 'keymap (w3m-tab-menubar-make-items))))))
+
+(defsubst w3m-tab-menubar-pull-bufnum (bufname)
+  (cond
+   ((string= "*w3m*" bufname) 1)
+   ((string-match "\\*w3m\\*<\\([0-9]+\\)>" bufname)
+    (string-to-number (match-string 1 bufname)))
+   (t 100)))
+
+(defun w3m-tab-menubar-make-items ()
+  "Create w3m tab menu items."
+  (let ((cbuf (current-buffer))
+	menus bufs title)
+    (dolist (buf (buffer-list))
+      (with-current-buffer buf
+	(when (eq major-mode 'w3m-mode)
+	  (setq title (cond
+		       ((and (stringp w3m-current-title)
+			     (not (string= w3m-current-title "<no-title>")))
+			w3m-current-title)
+		       ((stringp w3m-current-url)
+			(directory-file-name
+			 (if (string-match "^[^/:]+:/+" w3m-current-url)
+			     (substring w3m-current-url (match-end 0))
+			   w3m-current-url)))
+		       (t "No title")))
+	  (setq bufs (cons (list (buffer-name) title (eq cbuf buf)) bufs)))))
+    (setq bufs
+	  (sort bufs (lambda (x y)
+		       (< (w3m-tab-menubar-pull-bufnum (car x))
+			  (w3m-tab-menubar-pull-bufnum (car y))))))
+    (dolist (elem  bufs)
+      (setq menus
+	    (cons
+	     (nconc (list (nth 0 elem)
+			  (format "%s %s"
+				  (if (nth 2 elem) "*" " ")
+				  (nth 1 elem))
+			  (cons nil nil))
+		    'w3m-tab-menubar-open-buffer)
+	     menus)))
+    (nreverse menus)))
 
 (defun w3m-fontify-images ()
   "Fontify image alternate strings in this buffer which contains
